# shiftd

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  basic_conversion.py  basic_example.py  batch_conversion.py  chain_conversions.py  list_formats.py  parse_and_inspect.py  sqlite_conversion  tablemodel_from_code.py
examples/data/: books.yaml  cities.toml  movies.db  products.json  scores.tsv  sensors.xml  tasks.toon  users.csv
shiftd/: __init__.py  cli.py  engine.py  schema.py
shiftd/parsers/: __init__.py  arrow_parser.py  csv_parser.py  duckdb_parser.py  excel_parser.py  html_parser.py  json_parser.py  jsonl_parser.py  markdown_parser.py  mysql_parser.py  parquet_parser.py  postgres_parser.py  registry.py  sqlite_parser.py  toml_parser.py  toon_parser.py  tsv_parser.py  xml_parser.py  yaml_parser.py
shiftd/serializers/: __init__.py  arrow_serializer.py  csv_serializer.py  duckdb_serializer.py  excel_serializer.py  html_serializer.py  json_serializer.py  jsonl_serializer.py  markdown_serializer.py  mysql_serializer.py  parquet_serializer.py  postgres_serializer.py  registry.py  sqlite_serializer.py  toml_serializer.py  toon_serializer.py  tsv_serializer.py  xml_serializer.py  yaml_serializer.py
tasks/: __init__.py  test.py
